--- a/front-end/css/26 background image.html
+++ b/front-end/css/26 background image.html
@@ -2,27 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>background-image</title>
+    <title>image</title>
     <style>
-body{
-    background-image: url(image/background.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-/* 
-    //background-image: url(image/background) no-repeat center center;
-     */
-}
+        body{
+            background-image: url(image.jpg);
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            background-attachment: fixed;
+            background-position: center;
+        }
     </style>
 </head>
 <body>
-    <h1>css background-image</h1>
-    <div class="box">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam aliquid iusto ratione voluptatum, praesentium ipsam doloremque distinctio iste asperiores eaque ipsum veritatis! Laudantium, temporibus iure. Ut aut, vero consequatur aperiam porro obcaecati natus commodi veniam eum dicta nisi libero veritatis ipsa sunt, quod odio exercitationem! Veniam voluptatum magni magnam praesentium assumenda sapiente consequatur ullam molestias, nihil quidem voluptatibus facilis sit eos quod nulla expedita doloribus minima. Cupiditate, expedita repellat. Dolorum corporis suscipit quod laudantium explicabo fugiat, nemo sapiente eum vero veniam eveniet molestiae nulla omnis praesentium deleniti! Quaerat, repellendus. Hic unde ea et odit modi architecto mollitia ratione corporis sapiente.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda quia eaque animi corporis debitis nobis, labore quam! Quod deserunt molestias amet, , impedit dolor? Sed necessitatibus maiores, eius laborum adipisci blanditiis neque cumque cupiditate corporis suscipit labore! Aut itaque dolore consequatur veritatis dolor voluptatum cumque sit, architecto facilis autem officiis ipsa odio praesentium, eius voluptatibus nam voluptate provident laborum maiores perferendis quam ea ratione? Quia, ea! Aperiam quia eos consequuntur veniam enim delectus provident asperiores hic voluptatum porro, totam architecto in ad. Explicabo, quibusdam reprehenderit. Sit explicabo dolorem molestiae vero tenetur odio? Facilis, autem ipsum ab quia quod vero accusamus nemo quisquam doloribus. Quidem modi sit earum veritatis. Ex labore consectetur, esse aliquam cum porro pariatur facere laboriosam quas suscipit explicabo exercitationem architecto ipsum magnam saepe voluptates in molestias inventore. Iure eos reprehenderit illum rem eaque commodi nesciunt qui est repellendus non! Et ut ullam repellendus saepe expedita provident architecto itaque officia. Dolore veritatis esse magnam, perspiciatis ipsum corporis dicta error soluta culpa exercitationem neque sunt dignissimos! Repudiandae cupiditate inventore non voluptatibus praesentium esse rem repellat mollitia earum nisi laudantium, ullam quam voluptates nostrum placeat molestiae dignissimos nemo dolorem in sequi harum consequatur voluptate vero. Placeat nam alias obcaecati. Ullam asperiores debitis labore. Impedit at possimus tenetur, ex similique architecto sed accusamus est sequi soluta ipsam mollitia exercitationem officiis neque, quam voluptas. Quos sint sequi sed. Praesentium a sint laboriosam porro inventore error repudiandae voluptatem ut aut eveniet voluptas amet qui minus quaerat facere reprehenderit voluptatum, iste velit laudantium? Eligendi, quod voluptatibus. Odio necessitatibus impedit, deleniti quis odit vitae natus! Magnam qui id dignissimos veniam dolorem odio ad culpa doloremque reiciendis, modi a! Non quis repellendus quisquam? Commodi facere ut dolore tempora odio consectetur voluptate blanditiis quidem neque at pariatur unde aliquid dolorem, voluptatem voluptas dignissimos perspiciatis qui inventore asperiores. Est voluptatum modi a adipisci reiciendis quaerat quisquam, eos temporibus pariatur eum dolor sunt laborum corporis repellendus illum vero optio assumenda labore et dolorem laudantium praesentium? Neque explicabo odit laborum ratione dignissimos velit!
-    </div>
+ this is a background image   
 </body>
 </html>
