--- a/front-end/css/31 background bland mode.html
+++ b/front-end/css/31 background bland mode.html
@@ -13,7 +13,7 @@
             background-repeat: no-repeat;
             background-position: center center;
             background-attachment: fixed;
-            background-blend-mode: multiply;
+            background-blend-mode: exclusion;
             /* 
     //background-image: url(image/background) no-repeat center center;
      */
