--- a/front-end/css/55 box-decoration-break.html
+++ b/front-end/css/55 box-decoration-break.html
@@ -9,7 +9,7 @@
 .box{
     border: 2px solid black;
     background-color: antiquewhite;
-    box-decoration-break: clone;
+    box-decoration-break: slice;
     padding: 10px;
     line-height: 50px;
 }
