Changes to be committed:

--- a/front-end/css/cube.html
+++ b/front-end/css/cube.html
@@ -26,7 +26,7 @@
 
             transform-style: preserve-3d;
 
-            animation: rotate 15s linear infinite;
+            animation: rotate 3s alternate-reverse infinite;
         }
 
         @keyframes rotate {
