--- a/front-end/css/53 object-fit.html
+++ b/front-end/css/53 object-fit.html
@@ -20,7 +20,7 @@
         img{
             width: 300px;
             height: 400px;
-            object-fit: contain;
+            object-fit: cover;
         }
 
     </style>
