Changes to be committed: 	modified:   .vscode/launch.json

--- a/login and  registration/test.html
+++ b/login and  registration/test.html
@@ -7,7 +7,8 @@
     <title>test code</title>
 </head>
 
-<body>
+<body><h1>this is a head</h1>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, adipisci!</div>
     <script>
         // let age = prompt("please enter age");
         // age = parseInt(age);
@@ -52,16 +53,21 @@
         // }
 
 
-        let text = "count an umber";//string count white space
-        document.write(text.length);
-        document.write("<br>");
-        document.write(text.toUpperCase());
-        document.write("<br>");
-        document.write(text.toLowerCase());
+        // let text = "count an umber";//string count white space
+        // document.write(text.length);
+        // document.write("<br>");
+        // document.write(text.toUpperCase());
+        // document.write("<br>");
+        // document.write(text.toLowerCase());
 
-        // document.write(text.substring(3));
-        console.log(text.substring(2,4));
+        // // document.write(text.substring(3));
+        // console.log(text.substring(2,4));
+        let a  = document.body.firstElementChild;
+        let b = a.parentElement.lastChild
+        console.log(b);
+        console.log(a);
     </script>
 </body>
 
 </html>
+9374530003
