--- a/project/product filter/index.html
+++ b/project/product filter/index.html
@@ -14,11 +14,15 @@
             <button id="search">Search</button>
         </div>
         <div id="button">
-            <button class="button-value">all</button>
+            <button class="button-value active">all</button>
             <button class="button-value">Topwear</button>
             <button class="button-value">Bottomwear</button>
             <button class="button-value">Jacket</button>
             <button class="button-value">Watch</button>
+
+            <div id="product">
+
+            </div>
         </div>
     </div>
 
